[package]
name = "server"
version = "0.1.0"
authors = ["Maxence Moutoussamy <maxence.moutoussamy@ackl.io>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
